Fix task-01, add picture

--- a/src/ex10_html-css-fundamentals-part2/task-01.html
+++ b/src/ex10_html-css-fundamentals-part2/task-01.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <img class="circle" src="./img/ex10_1.jpg" alt="круг">
-        <img class="mask" src="./img/ex10_1.jpg" alt="маска">
+        <img class="circle" src="./image/ex10_1.jpg" alt="круг">
+        <img class="mask" src="./image/ex10_1.jpg" alt="маска">
     </body>
 </html>
