Fix task-02, add id

--- a/src/ex10_html-css-fundamentals-part2/task-02.html
+++ b/src/ex10_html-css-fundamentals-part2/task-02.html
@@ -11,18 +11,18 @@
         <fieldset class="personalData">
             <legend>Personal data</legend>
             <div>
-                <label>Surname</label>
-                <input type="text">
+                <label for="surname">Surname</label>
+                <input id="surname" type="text">
             </div>
             <br>
             <div>
-                <label>First name</label>
-                <input type="text">
+                <label for="firstName">First name</label>
+                <input id="firstName" type="text">
             </div>
             <br>
             <div>
-                <label>Middle name</label>
-                <input type="text">
+                <label for="middleName">Middle name</label>
+                <input id="middleName" type="text">
             </div>
             <br>
             <div>
@@ -34,8 +34,8 @@
             </div>
             <br>
             <div>
-                <label>Age</label>
-                <input type="number" min="18" max="101">
+                <label for="age">Age</label>
+                <input id="age" type="number" min="18" max="101">
             </div>
             <br>
             <div>
@@ -89,24 +89,24 @@
         <fieldset  class="contactInformation">
             <legend>Contact information</legend>
             <div>
-                <label>Site</label>
-                <input type="url">
+                <label for="site">Site</label>
+                <input id="site" type="url">
             </div>
             <br>
             <div>            
-                <label>Email</label>
-                <input type="email">
+                <label for="email">Email</label>
+                <input id="email" type="email">
             </div>
             <br>
             <div>
-                <label>Phone</label>
-                <input type="tel">
+                <label for="phone">Phone</label>
+                <input id="phone" type="tel">
             </div>
         </fieldset>
         <br>
         <div>
-            <label>Password</label>
-            <input type="password" required>
+            <label for="password">Password</label>
+            <input id="password" type="password" required>
         </div>
         <br>
         <div>
