Fix task-03, add id and class

--- a/src/ex10_html-css-fundamentals-part2/task-03.html
+++ b/src/ex10_html-css-fundamentals-part2/task-03.html
@@ -8,13 +8,13 @@
     </head>
 
     <body>
-        <table>
-            <thead>
+        <table class="table">
+            <thead class="heading">
                 <tr>
-                    <th>CUSTOMER</th><th>PHONE</th><th>MAIL</th><th>OUTSTANDING</th>
+                    <th id="column">CUSTOMER</th><th id="column">PHONE</th><th id="column">MAIL</th><th id="column">OUTSTANDING</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="bodyTable">
                 <tr>
                     <td>Jhonny Aviony</td><td>(740)841-7566</td><td>info@johnyaviony.com</td><td>$2.400.00</td>
                 </tr>
