--- a/src/ex10_html-css-fundamentals-part2/task-03.html
+++ b/src/ex10_html-css-fundamentals-part2/task-03.html
@@ -11,7 +11,7 @@
         <table class="table">
             <thead class="heading">
                 <tr>
-                    <th id="column">CUSTOMER</th><th id="column">PHONE</th><th id="column">MAIL</th><th id="column">OUTSTANDING</th>
+                    <th>CUSTOMER</th><th>PHONE</th><th>MAIL</th><th>OUTSTANDING</th>
                 </tr>
             </thead>
             <tbody class="bodyTable">
