Fix change button, rename function and delete empty lines

--- a/src/ex12_js_dom/task.html
+++ b/src/ex12_js_dom/task.html
@@ -4,17 +4,14 @@
         <meta charset="utf-8">
         <title>Слайдер</title>       
         <link rel="stylesheet" href="task.css">   
-        <script src="task.js"></script>  
-     
+        <script src="task.js"></script>       
     </head>
-
     <body class="body">
         <div class="slides">
-            <button class="button" onclick="prev()">&lt;</button>
+            <button class="button" onclick="back()">&lt;</button>
             <div class="viewport" id="imageViewport">
             </div>
             <button class="button" onclick="next()">&gt;</button>
         </div>
-    
-    </body>  
+        </body>  
 </html>
