--- a/src/kanban/task.html
+++ b/src/kanban/task.html
@@ -31,7 +31,7 @@
             </div>
         </main>
       
-        <footer>
+        <footer class="footer">
             <div class="activeTasks"> 
                 <label class="labelActiveTasks">Active tasks:</label>
                 <span class="spanFooter">&ensp; &lt; N &gt;</span>
