Fix update html and css

--- a/src/kanban/task.html
+++ b/src/kanban/task.html
@@ -9,20 +9,22 @@
     <body>
         <header>
             <div class="menu">
-                <img class="imgMenu" src="./imgKanban/menuGamb.png" alt="menu">
+                <button class="buttonMenu">
+                    <img class="imgMenu" src="./imgKanban/menuGamb.png" alt="menu">
+                </button>
             </div>
             <div class="heading">
                 <h1>Awesome Kanban Board</h1>
             </div>
             <button class="buttonCreateNewList">
-                <img class="imgCreateNewList" src="./imgKanban/plus2.png" alt="Create list">
+                <img class="imgCreateNewList" src="./imgKanban/plus.svg" alt="Create list">
                 <span class="spanCreateNewList">Create new list</span>
             </button>                           
             <div class="avatar">
-                <div class="borderAvatar">
-                    <img class="imgAvatar" src="./imgKanban/avatar3.png" alt="avatar">                    
-                </div>
-                <button class="buttonUserMenu">&or;</button>
+                <button class="buttonUserMenu">
+                   <img class="imgAvatar borderAvatar" src="./imgKanban/avatar.svg" alt="avatar">                    
+                   &or;
+               </button>
             </div>           
         </header>
 
