Fix header and change image

--- a/src/kanban/task.html
+++ b/src/kanban/task.html
@@ -8,24 +8,28 @@
 
     <body>
         <header>
-            <div class="menu">
-                <button class="buttonMenu">
-                    <img class="imgMenu" src="./imgKanban/menuGamb.png" alt="menu">
+            <div class="leftBlock">
+                <div class="menu">
+                    <button class="buttonMenu">
+                        <img class="imgMenu" src="./imgKanban/menuGamb.png" alt="menu">
+                    </button>
+                </div>
+                <div class="heading">
+                    <h1>Awesome Kanban Board</h1>
+                </div>
+            </div>
+            <div class="rightBlock">
+                <button class="buttonCreateNewList">
+                    <img class="imgCreateNewList" src="./imgKanban/plus.svg" alt="Create list">
+                    <span class="spanCreateNewList">Create new list</span>
+                </button>                           
+                <div class="avatar">
+                    <button class="buttonUserMenu">
+                    <img class="imgAvatar borderAvatar" src="./imgKanban/avatar.svg" alt="avatar">                    
+                    &or;
                 </button>
-            </div>
-            <div class="heading">
-                <h1>Awesome Kanban Board</h1>
-            </div>
-            <button class="buttonCreateNewList">
-                <img class="imgCreateNewList" src="./imgKanban/plus.svg" alt="Create list">
-                <span class="spanCreateNewList">Create new list</span>
-            </button>                           
-            <div class="avatar">
-                <button class="buttonUserMenu">
-                   <img class="imgAvatar borderAvatar" src="./imgKanban/avatar.svg" alt="avatar">                    
-                   &or;
-               </button>
-            </div>           
+                </div>  
+            </div>         
         </header>
 
         <main class="main">
