--- a/src/kanban/task.html
+++ b/src/kanban/task.html
@@ -25,7 +25,7 @@
                 </button>  
                 <div class="separator"></div>                         
                 <div class="avatar">
-                    <button id="buttonDropDown" class="buttonUserMenu arrowDown" onclick="toggleUserMenu()" onblur="toggleUserMenu()">
+                    <button id="buttonDropDown" class="buttonUserMenu arrowDown">
                         <img class="imgAvatar borderAvatar" src="./imgKanban/avatar.svg" alt="avatar">              
                     </button> 
                     <nav id="dropDownUserMenu" class="hidden dropDownContent">
