Ex13 display task list with issues

--- a/src/kanban/task.html
+++ b/src/kanban/task.html
@@ -11,7 +11,7 @@
             <div class="leftBlock">
                 <div class="menu">
                     <button class="buttonMenu">
-                        <img class="imgMenu" src="./imgKanban/menuGamb.png" alt="menu">
+                        <img class="imgMenu hoverAction" src="./imgKanban/menuGamb.png" alt="menu">
                     </button>
                 </div>
                 <div class="heading">
@@ -19,13 +19,13 @@
                 </div>
             </div>
             <div class="rightBlock">
-                <button class="buttonCreateNewList">
+                <button class="buttonCreateNewList hoverAction">
                     <img class="imgCreateNewList" src="./imgKanban/plus.svg" alt="Create list">
                     <span class="spanCreateNewList">Create new list</span>
                 </button>  
                 <div class="separator"></div>                         
                 <div class="avatar">
-                    <button id="buttonDropDown" class="buttonUserMenu arrowDown">
+                    <button id="buttonDropDown" class="buttonUserMenu hoverAction arrowDown">
                         <img class="imgAvatar borderAvatar" src="./imgKanban/avatar.svg" alt="avatar">              
                     </button> 
                     <nav id="dropDownUserMenu" class="hidden dropDownContent">
@@ -38,10 +38,7 @@
             </div>   
         </header>
 
-        <main class="main">
-            <div class="mainContainer">
-            </div>
-        </main>
+        <main class="main"></main>
       
         <footer class="footer">
             <div class="activeTasks"> 
